--- a/css/main.css
+++ b/css/main.css
@@ -1,54 +1,56 @@
-body {
-  font-family: "Ubuntu", sans-serif;
-}
-/*
-table {
-  margin: auto;
-  width: 100%;
-  text-align: center;
-}
-
-#weatherSection,
-#forecastSection {
-  display: none;
-  justify-content: center;
-  flex-flow: row;
-  text-shadow: 0 0 2px;
-}
-
-input {
-  padding: 0.5rem;
-  text-align: center;
-  text-transform: capitalize;
-  margin-bottom: 1rem;
-}
-
-#charger {
-  width: 5rem;
-  display: none;
-}
-
-#ville {
-  width: 100%;
-}
-#infos {
-  font-weight: bold;
-}
-
-#commentaire,
-#tempsIcone,
-#temperature {
-  font-size: 2rem;
-}
-#view {
-  display: flex;
-  justify-content: center;
-}
-@media only screen and (min-device-width: 375px) and (max-device-width: 667px) {
-  #charger {
+/* body{
+    background-color: black;
+    color: white;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+    padding:10px;
+    width: 60%;
     margin: auto;
-    display: block;
-  }
+   
+}
+
+table{
+    margin: auto;
+    width: 100%;
+    text-align: center;
+}
+
+#weatherSection, #forecastSection{
+    display: none;
+    justify-content: center;
+    flex-flow: row;
+    text-shadow: 0 0 2px;
+
+}
+
+input{
+    padding: .5rem;
+    text-align: center;
+    text-transform: capitalize;
+    margin-bottom: 1rem;
+    
+}
+
+#charger{
+    width: 5rem;
+    display: none;
+
+}
+
+#ville{
+    width: 100%;
+}
+#infos{
+    font-weight: bold;
+}
+
+#commentaire, #tempsIcone,#temperature{
+    font-size: 2rem;
+}
+#view{
+    display: flex;
+    justify-content: center;
+
 }
 @media only screen 
 and (min-device-width : 375px) 
@@ -63,3 +65,4 @@ and (max-device-width : 667px){
 /* #nextdays i:first-child::before{
     content: none;
 } */
+
