--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,14 @@ html {
 .w50 {
   flex: 1 1 auto;
 }
+.nexthours,
+.nextdays {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: baseline;
+  justify-content: space-evenly;
+}
+
 /* 
 table{
     margin: auto;
