--- a/css/main.css
+++ b/css/main.css
@@ -3,12 +3,14 @@
 }
 body {
   font-family: "Ubuntu", sans-serif;
+  margin: 0;
 }
 
 html {
   font-size: 16px;
+  margin: 0;
+  padding: 0;
 }
-
 .container-flex {
   width: 920px;
   max-width: 90%;
@@ -18,7 +20,6 @@ html {
   margin-left: auto;
   margin-right: auto;
 }
-
 /* layout */
 .l-section {
   width: 100%;
