--- a/css/main.css
+++ b/css/main.css
@@ -83,13 +83,17 @@ form {
   background-color: var(--white);
   margin: 5px;
   padding: 5px 20px;
+  color: var(--white);
+  font-weight: 700;
 }
 .infoTemp {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  color: var(--white);
   background-image: linear-gradient(to left top, #2980b9, #6dd5fa, #ffffff);
+}
+.infoPlus {
+  text-align: left;
 }
 
 .infoDate {
@@ -107,13 +111,10 @@ form {
 .infoTemp__degrees {
   text-align: left;
 }
-.infoPlus {
-  text-align: left;
-  padding: 10px 0 10px 20px;
-}
 
 .infoTemp__icon {
   font-size: calc(20px + 40 * ((100vw - 320px) / 680));
+  line-height: 0;
 }
 .searchInput input {
   width: 200px;
@@ -131,8 +132,8 @@ form {
   font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
-  padding: 10px 20px;
-  font-size: 20px;
+  padding: 10px 15px;
+  font-size: 15px;
 }
 
 @media screen and (min-width: 320px) {
