--- a/css/main.css
+++ b/css/main.css
@@ -152,7 +152,21 @@ form {
   background-color: var(--blue);
   color: white;
 }
+.pac-container {
+  font-family: "Niramit", sans-serif;
+  border: 2px solid var(--blue);
+  border-radius: 3px;
+  margin-top: -1px;
+  border-top: none;
+}
+.pac-logo::after {
+  height: 0;
+  background: none;
+}
 
+.pac-matched {
+  color: var(--blue);
+}
 @media screen and (min-width: 320px) {
   html {
     font-size: calc(16px + 6 * ((100vw - 320px) / 680));
